[package]
name = "nxml"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "llama"
path = "src/bin/llama/main.rs"

[dependencies]
bstr = "1.4.0"
clap = { version = "4.2.1", features = ["derive"] }
# half = { version = "2.2.1" }
half = { git = "https://github.com/starkat99/half-rs.git"}
ordered-float = "3.6.0"
